[package]
name = "mona_no_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mona = { path = "sub/mona/mona_core" }
mona_wasm = { path = "sub/mona/mona_wasm" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
dotenv = "0.15.0"
ring = "0.16.20"
bcrypt = "0.12.1"
lazy_static = "1.4.0"
diesel_migrations = "1.4.0"
redis = { version = "0.21.5", features = ["r2d2"] }
r2d2 = "0.8.9"
tokio-cron-scheduler = "0.6.5"
tokio = { version = "1.17.0", features = ["full"] }
figment = { version = "0.10", features = ["env", "toml", "json"] }
nanoid = "0.4.0"
rocket_cors = "0.5.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
